--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,7 +6,9 @@
 }
 
 body {
-  background-color: black;
+  background-image: linear-gradient(#111111, #050A30);
+  background-repeat: no-repeat;
+  background-size: cover;
   width: 100%;
   min-height: 100vh;
   display: flex;
@@ -21,7 +23,7 @@ body:after {
   right: 0;
   width: 100%;
   height: 100%;
-  background-image: linear-gradient(#f00, #f0f);
+  background-image: linear-gradient(#8b4efc, #f18ebe);
   clip-path: circle(20% at 10% 10%);
 }
 
@@ -32,7 +34,7 @@ body:before {
   right: 0;
   width: 100%;
   height: 100%;
-  background-image: linear-gradient(#60a2d8, #e91e63 50%);
+  background-image: linear-gradient(#f4f8f7, #0c32f0);
   clip-path: circle(25% at 88% 77%);
 }
 
@@ -46,7 +48,7 @@ body:before {
   -o-border-radius: 5px;
   border-top: 1px solid rgba(255, 255, 255, 0.2);
   border-left: 1px solid rgba(255, 255, 255, 0.2);
-  box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 25px 5px rgba(0, 0, 0, 0.5);
   overflow: hidden;
   backdrop-filter: blur(16px);
   z-index: 10;
@@ -59,7 +61,7 @@ body:before {
 
 .container .calculator .input {
   border: none;
-  height: 140px;
+  height: 120px;
   width: 300px;
   background: transparent;
   padding-right: 15px;
@@ -95,15 +97,82 @@ body:before {
   grid-column: span 2;
   width: 150px;
   background-color: rgba(255, 255, 255, 0.02);
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -o-transition: 0.5s;
+}
+
+.container .calculator .num.clear:active {
+  background-color: rgba(248, 59, 59, 0.2);
 }
 
 .container .calculator .num.plus {
   grid-row: span 2;
+  background-color: rgba(255, 255, 255, 0.02);
   height: 150px;
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -o-transition: 0.5s;
+}
+
+.container .calculator .num.plus:active {
+  background-color: rgba(0, 255, 21, 0.2);
 }
 
 .container .calculator .num.equal {
   background-color: rgba(255, 255, 255, 0.02);
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -o-transition: 0.5s;
+}
+
+.container .calculator .num.equal:active {
+  background-color: rgba(0, 140, 255, 0.2);
+}
+
+.container .calculator .num.mines {
+  background-color: rgba(255, 255, 255, 0.02);
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -o-transition: 0.5s;
+}
+
+.container .calculator .num.mines:active {
+  background-color: rgba(251, 255, 0, 0.2);
+}
+
+.container .calculator .num.divide {
+  background-color: rgba(255, 255, 255, 0.02);
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -o-transition: 0.5s;
+}
+
+.container .calculator .num.divide:active {
+  background-color: rgba(247, 173, 125, 0.2);
+}
+
+.container .calculator .num.zarb {
+  background-color: rgba(255, 255, 255, 0.02);
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -o-transition: 0.5s;
+}
+
+.container .calculator .num.zarb:active {
+  background-color: rgba(170, 0, 255, 0.2);
 }
 
 .container .calculator .num:hover {
@@ -116,7 +185,6 @@ body:before {
 }
 
 .container .calculator .num:active {
-  background-color: #7155eb;
-  font-weight: 600;
+  background-color: rgba(255, 255, 255, 0.2);
 }
 /*# sourceMappingURL=main.css.map */
