--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -1,7 +1,15 @@
 $glass-color      : rgba(white, 0.07);
-$back-color       : rgb(0, 0, 0);
-$gradient-color-1 :linear-gradient(#f00, #f0f);
-$gradient-color-2 :linear-gradient(#60a2d8, #e91e63 50%);
+$active-color     : rgba(#ffffff, 0.2);
+$clear-color      : rgba(#f83b3b, 0.2);
+$equal-color      : rgba(#008cff, 0.2);
+$plus-color       : rgba(#00ff15, 0.2);
+$divide-color     : rgba(#f7ad7d, 0.2);
+$mines-color      : rgba(#fbff00, 0.2);
+$zarb-color       : rgba(#aa00ff, 0.2);
+$back-color       :linear-gradient(#111111, #050A30);
+$gradient-color-1 :linear-gradient(rgb(139, 78, 252), #f18ebe);
+$gradient-color-2 :linear-gradient(#f4f8f7, #0c32f0);
+$blur             :16px;
 
 @mixin flex-cc {
     display        : flex;
@@ -18,9 +26,9 @@ $gradient-color-2 :linear-gradient(#60a2d8, #e91e63 50%);
     -o-border-radius     : 5px;
     border-top           : 1px solid rgba(white, 0.2);
     border-left          : 1px solid rgba(white, 0.2);
-    box-shadow           : 5px 5px 25px rgba($color: #000000, $alpha: 0.5);
+    box-shadow           : 0px 0px 25px 5px rgba($color: #000000, $alpha: 0.5);
     overflow             : hidden;
-    backdrop-filter      : blur(16px);
+    backdrop-filter      : blur($blur);
 }
 
 @mixin border-br {
