--- a/assets/scss/_calc.scss
+++ b/assets/scss/_calc.scss
@@ -9,7 +9,7 @@
 
         .input {
             border       : none;
-            height       : 140px;
+            height       : 120px;
             width        : 300px;
             background   : transparent;
             padding-right: 15px;
@@ -40,22 +40,94 @@
             -ms-transition    : all 0.5s;
             -o-transition     : all 0.5s;
 
-            &.clear {
-                grid-column     : span 2;
-                width           : 150px;
-                background-color: rgba($color: #ffffff, $alpha: .02);
 
+
+
+
+            &.clear {
+                grid-column       : span 2;
+                width             : 150px;
+                background-color  : rgba(#ffffff, .02);
+                transition        : 0.5s;
+                -webkit-transition: 0.5s;
+                -moz-transition   : 0.5s;
+                -ms-transition    : 0.5s;
+                -o-transition     : 0.5s;
+
+                &:active {
+                    background-color: $clear-color;
+                }
             }
 
             &.plus {
-                grid-row: span 2;
-                height  : 150px;
+                grid-row          : span 2;
+                background-color  : rgba(#ffffff, .02);
+                height            : 150px;
+                transition        : 0.5s;
+                -webkit-transition: 0.5s;
+                -moz-transition   : 0.5s;
+                -ms-transition    : 0.5s;
+                -o-transition     : 0.5s;
+
+                &:active {
+                    background-color: $plus-color;
+                }
 
             }
 
             &.equal {
-                background-color: rgba($color: #ffffff, $alpha:.02);
+                background-color  : rgba($color: #ffffff, $alpha:.02);
+                transition        : 0.5s;
+                -webkit-transition: 0.5s;
+                -moz-transition   : 0.5s;
+                -ms-transition    : 0.5s;
+                -o-transition     : 0.5s;
+
+                &:active {
+                    background-color: $equal-color;
+                }
             }
+
+            &.mines {
+                background-color  : rgba($color: #ffffff, $alpha:.02);
+                transition        : 0.5s;
+                -webkit-transition: 0.5s;
+                -moz-transition   : 0.5s;
+                -ms-transition    : 0.5s;
+                -o-transition     : 0.5s;
+
+                &:active {
+                    background-color: $mines-color;
+                }
+            }
+
+            &.divide {
+                background-color  : rgba($color: #ffffff, $alpha:.02);
+                transition        : 0.5s;
+                -webkit-transition: 0.5s;
+                -moz-transition   : 0.5s;
+                -ms-transition    : 0.5s;
+                -o-transition     : 0.5s;
+
+                &:active {
+                    background-color: $divide-color;
+                }
+            }
+
+            &.zarb {
+                background-color  : rgba($color: #ffffff, $alpha:.02);
+                transition        : 0.5s;
+                -webkit-transition: 0.5s;
+                -moz-transition   : 0.5s;
+                -ms-transition    : 0.5s;
+                -o-transition     : 0.5s;
+
+                &:active {
+                    background-color: $zarb-color;
+                }
+            }
+
+
 
 
             &:hover {
@@ -68,12 +140,8 @@
             }
 
             &:active {
-                // color           : black;
-                background-color: rgb(113, 85, 235);
-                font-weight     : 600;
-
+                background-color: $active-color;
             }
-
         }
     }
 
