--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,6 +72,7 @@ body:before {
   grid-column: span 4;
   border-top: 1px solid rgba(255, 255, 255, 0.05);
   border-right: 1px solid rgba(255, 255, 255, 0.05);
+  letter-spacing: 3px;
 }
 
 .container .calculator .num {
