--- a/assets/scss/_calc.scss
+++ b/assets/scss/_calc.scss
@@ -19,6 +19,7 @@
             font-size    : 30px;
             grid-column  : span 4;
             @include border-br;
+            letter-spacing: 3px;
 
         }
 
